--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-<h1>This Site is Under Construction</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="content-script-type" content="text/javascript" />
+    <meta http-equiv="content-style-type" content="text/css" />
+    <meta http-equiv="content-language" content="nl" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Yash Pratyush Sinha" />
+    <meta name="description" content="This is Yash Pratyush Sinha aka YP, I am a budding Data Scientist, currently syudying the magic Deep Learning, who is adept as a full stack web devloper." />
+    <meta name="keywords" content="C++ Programmer , Python Programmer, Data Scientist, Machine Learning, Object Recognition Web developer, IIIT Bhubaneshwar, Algorithms, Python, Neural Networks, OOP, Yash Pratyush Sinha" />
+    <meta name="robots" content="index, follow" />
+    <meta name="revisit-after" content="14 days" />
+    <title>
+        Yash Pratyush Sinha
+    </title>
+    <!--jQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
+    <!-- Bootstrap core CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-47791016-2', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
+    <!--[if lt IE 9]>
+            <script src="/view/js/html5shiv.js">
+            </script>
+            <script src="/view/js/respond.min.js">
+            </script>
+        <![endif]-->
+</head>
+<body>
+	<h1>This Site is Under Construction</h1>
+</body>
